# AutonomousCarDemo

./: CMakeLists.txt  Readme.md  Readme.txt~
include/: CrossingDetection.cpp  CrossingDetection.h  LaneDetection.cpp  LaneDetection.h  LocalMaximaDetection.cpp  LocalMaximaDetection.h  image_processing.cpp  image_processing.h
src/: AutomodelCarDemo.cpp  AutomodelCarDemo.hpp
